# Atakx

./: .gitignore  CMakeLists.txt  Makefile  README.md
openings/: gapped.txt  normal.txt
patches/: eval.txt  search.txt
src/: alphabeta.cpp  alphabeta.h  alphabeta.hpp  bitboard.cpp  bitboard.h  bitboard.hpp  board.cpp  board.h  board.hpp  eval.cpp  eval.h  eval.hpp  hashtables.cpp  hashtables.h  hashtables.hpp  lookup.cpp  lookup.h  lookup.hpp  main.cpp  main.h  main.hpp  mcts.cpp  mcts_.cpp  mcts_.h  moves.cpp  moves.h  moves.hpp  nodes.h  search.cpp  search.h  sort.cpp  sort.hpp  tests.cpp  tests.h  uai.cpp  uai.h  uai.hpp
src/alphabeta/: search.cpp  search.hpp  sort.cpp  sort.hpp
src/mcts/: rollouts.cpp  rollouts.hpp
src/tuner/: player.cpp  player.h  player.hpp  population.cpp  population.h  population.hpp  tuner.cpp  tuner.h  tuner.hpp
src/tuners/genetic/: main.cpp  main.hpp  player.cpp  player.hpp  population.cpp  population.hpp
tests/: main.cpp  main.hpp  test_hashtable_keys.cpp  test_lookup_tables.cpp  test_mates.cpp
tests/benchmarks/: eval.txt  search.txt
tests/notes/: eval.txt  search.txt
